Changes in Version 2.0-0 (2017-01-24)
=====================================

   o added ranktest.default(), so user can now specify the outcomes and
     corresponding sampling variances directly to the function

   o added regtest.default(), so user can now specify the outcomes and
     corresponding sampling variances directly to the function

   o added location-scale model

   o added a print method for 'rma.gosh' objects

   o added a new dataset (dat.pagliaro1992) for another illustration of a
     network meta-analysis

   o improved output formatting

   o the `[` method for 'escalc' objects now properly handles the 'ni' and
     'slab' attributes and does a better job of cleaning out superfluous
     variable name information

   o added rbind() method for 'escalc' objects

   o added more tests

   o some general code cleanup

   o minor updates in the documentation


Changes in Version 1.9-9 (2016-09-25)
=====================================

   o started to use git as version control system, GitHub to host the
     repository (https://github.com/wviechtb/metafor) for the development
     version of the package, Travis CI as continuous integration service
     (https://travis-ci.org/wviechtb/metafor), and Codecov for automated
     code coverage reporting (https://codecov.io/github/wviechtb/metafor)

   o argument 'knha' in rma.uni() and argument 'tdist' in rma.glmm() and
     rma.mv() are now superseded by argument 'test' in all three functions;
     for backwards compatibility, the 'knha' and 'tdist' arguments still
     work, but are no longer documented

   o rma(yi, vi, weights=1, test="knha") now yields the same results as
     rma(yi, vi, weighted=FALSE, test="knha") (but use of the Knapp and
     Hartung method in the context of an unweighted analysis remains an
     experimental feature)

   o one can now pass an 'escalc' object directly to rma.uni(), which then
     tries to automatically determine the 'yi' and 'vi' variables in the