@@ -7,6 +7,8 @@ Changes in Version 2.0-0 (2017-01-24)
    o added regtest.default(), so user can now specify the outcomes and
      corresponding sampling variances directly to the function
 
+   o funnel.default() gains 'subset' argument
+
    o added location-scale model
 
    o added a print method for 'rma.gosh' objects
